--- a/index.html
+++ b/index.html
@@ -18,13 +18,16 @@
         <div class="inner-element">
             <br><br>
             <h1>Auroras</h1>
-            <br><br>
+            <br>
             <button id="generateBtn">Generate an aurora</button>
             <br><br>
             <br>
-            <h4>Status</h4>
+            <div class="status">
+                <h4>Status</h4>
+                <br>
+                <span class="info" id="notify"></span>
+            </div>
             <br>
-            <span class="info" id="notify">Wait </span>
         </div>
     </div>
 
